feat: ui homepage

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -7,6 +7,8 @@
   background-size: cover;
   position: relative;
 
+  
+
   h1 {
     color: #fff;
     font-size: 48px;
@@ -92,5 +94,10 @@
         width: 100%;
       }
     }
+  }
+  .typeFilm:hover {
+    cursor: pointer;
+    color: red !important;
+    margin-left: 16px;
   }
 }
